fix footer gaps

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,6 @@
 @import '../../styles/main';
 
 .footer {
-
   &_container {
     display: flex;
     flex-direction: column;
@@ -15,7 +14,6 @@
 
     @include ontablet {
       flex-direction: row;
-      padding: 32px;
     }
 
     &_logo {
@@ -24,6 +22,18 @@
       align-items: center;
       height: 32px;
       width: 100%;
+
+      @include ontablet {
+        flex-grow: 1;
+        flex-basis: 0;
+      }
+    }
+
+    &_links {
+      @include ontablet {
+        flex-grow: 1;
+        flex-basis: 0;
+      }
     }
 
     &_back_top {
@@ -34,9 +44,10 @@
       width: 100%;
 
       @include ontablet {
-        justify-content: flex-end
+        flex-grow: 1;
+        flex-basis: 0;
+        justify-content: flex-end;
       }
-
     }
   }
 }
